--- a/T01/Tutorial01_1301213308_Natalie.html
+++ b/T01/Tutorial01_1301213308_Natalie.html
@@ -56,22 +56,21 @@
 
     <hr />
 
-    <h3><i>Connect with Me</i></h3>
+    <h3><i>Connect with Me</i></h3> <!--Natalie Diva Krisantya (1301213308) - IF4504-->
     <ul>
-      <li>
+      <li> <b>LinkedIn</b>
         <a href="https://linkedin.com/in/natalie-diva-krisantya/">
           <img src="assets/icons/linkedin-logo.svg" alt="LinkedIn" width="30" />
         </a>
       </li>
-      <li>
+      <li> <b>GitHub</b>
         <a href="https://github.com/nataliedk/">
           <img src="assets/icons/github-logo.svg" alt="GitHub" width="30" />
         </a>
       </li>
-      <li>Kirim Pesan:</li>
+      <li><b>Kirim Pesan:</b></li>
       <form action="" method="post">
-      <div >
-
+      <div>
         <table border="0"  >
           <tr >
             <td>Nama:</td>
@@ -147,7 +146,7 @@
               value="Saran"
               >Saran</input>
             </td>
-          </tr>
+          </tr> <!--Natalie Diva Krisantya (1301213308) - IF4504-->
           <tr>
             <td>Pesan:</td>
             <td>
